Favourites gap fix

--- a/src/features/favouritesPage/favProductList.scss
+++ b/src/features/favouritesPage/favProductList.scss
@@ -25,245 +25,6 @@ $card-img-height: 196px;
   display: flex;
   max-width : 100%;
   flex-wrap: wrap;
+  gap: 17px;
 
-}
-
-.card {
-    margin-right: 17px;
-    margin-bottom: 40px;
-    background-color: $white-color;
-    width: $card-width;
-    height: auto;
-    border-radius: $card-spacer;
-    border: 1px solid $elements-color;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    transition: all 0.5s ease-in-out;    
-    
-
-    &:hover {
-        cursor: initial;
-        transform: scale(1.05);
-        box-shadow: 0px 2px 16px 0px $shadow-clr;
-    }
-  
-    &__img {
-      width: $card-img-width;
-      height: $card-img-height;
-      display: flex;
-      margin-bottom: $card-spacer;
-      cursor: zoom-in;
-    }
-  
-    &__title {
-      color: $primary-color;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 21px;
-      padding-top: 16px;
-      margin-bottom: $card-spacer;
-    }
-  
-    &__price {
-      display: flex;
-      font-size: 22px;
-      font-style: normal;
-      font-weight: 800;
-      line-height: 140%;
-      padding-bottom: $card-spacer;
-      border-bottom: 1px solid $elements-color;
-      margin-bottom: $card-spacer;
-
-      &--title {
-        &-actual{display: inline-block;}
-        &-actual,
-        &-previous {
-          min-width: 50px;
-        }
-
-        &-previous {
-            display: inline-block;
-            margin-left: $card-spacer;
-            font-weight: 600;
-            color: $secondary-color;
-        }
-      }
-    }
-
-    &__description {
-      padding-top: $card-spacer;
-      margin-bottom: $card-spacer;
-    }
-  
-    &__details {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin: $card-spacer 0;
-  
-      &:last-child {
-        padding-bottom: $card-spacer;
-      }
-  
-      &-left {
-        margin: 0;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        color: $secondary-color;
-      }
-  
-      &-right {
-        margin: 0;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        color: $primary-color;
-      }
-    }
-  
-    &__buttons {
-      display: flex;
-      justify-content: space-between;
-  
-      &-left {
-        width: 160px;
-        height: 40px;
-        border-radius: $card-spacer;
-        border: none;
-        background: $accent-color;
-        color: $white-color;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 21px;
-        cursor: pointer;
-      }
-  
-      &-right {
-        @include square(40px);
-        cursor: pointer;
-        border: none;
-        background-color: transparent;
-      }
-    }
-  }
-  
-  .card-img {
-    width: auto;
-    height: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .added-to-cart {
-    background-color: $white-color;
-    border: 2px solid $elements-color;
-    color: $accent-color;
-    // animation onClick
-      -webkit-animation: heartbeat 1.5s ease-in-out both;
-              animation: heartbeat 1.5s ease-in-out both;
-  }
-
-  .added-to-favourites {
-    // animation onClick
-    -webkit-animation: heartbeat 1.5s ease-in-out both;
-    animation: heartbeat 1.5s ease-in-out both;
-  }
-
-  //animation onClick
-/**
- * ----------------------------------------
- * animation heartbeat
- * ----------------------------------------
- */
-@-webkit-keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: center center;
-            transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  10% {
-    -webkit-transform: scale(0.91);
-            transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  17% {
-    -webkit-transform: scale(0.98);
-            transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  33% {
-    -webkit-transform: scale(0.87);
-            transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  45% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-}
-@keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: center center;
-            transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  10% {
-    -webkit-transform: scale(0.91);
-            transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  17% {
-    -webkit-transform: scale(0.98);
-            transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  33% {
-    -webkit-transform: scale(0.87);
-            transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  45% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-}
-
-@media  (min-width: 1200px) {
-  .card:nth-child(4n) {
-    margin-right: 0;
-  }
-}
-
-@media  (min-width: 640px) and (max-width: 1199px) {
-  .card:nth-child(2n) {
-    margin-right: 0;
-  }
-}
-
-@media  (max-width: 639px) {
-  .card {
-    margin-right: 0;
-  }
 }
